💄 Fixed text overflow on mobile

--- a/src/routes/global.pcss
+++ b/src/routes/global.pcss
@@ -35,7 +35,7 @@ html {
                 @apply flex justify-center items-center;
 
                 .content {
-                    @apply max-w-4xl w-full pb-12;
+                    @apply md:max-w-4xl w-full pb-12;
 
                     section {
                         @apply w-full p-8;
